Colaboratory を使用して作成しました

--- a/titanic_regression.ipynb
+++ b/titanic_regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "titanic_regression.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOvm3df5zz0Bx7VVZ/inB/T",
+      "authorship_tag": "ABX9TyMLWPU4KnlNSZfkr/RHVzBg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "id": "MtAsLdCvCNbX",
         "outputId": "38eba1c7-4eb7-47ff-960a-23f5614249b7"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
         "id": "J9DArlDbBzGo",
         "outputId": "9493d08d-907c-4dd6-f16b-1e951d60bf61"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -428,7 +428,7 @@
       "metadata": {
         "id": "dChbM1OBC4n2"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -446,7 +446,7 @@
         "id": "2hDMnv2lI462",
         "outputId": "5e4e9be0-bd74-4cc9-b5b1-5e1c3e091033"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
         "id": "Zp00Wnz7LxKz",
         "outputId": "0306385f-d3d0-4619-ffca-3d6750091e3a"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,7 +548,7 @@
       "metadata": {
         "id": "fIuzpP6_O3vu"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -567,7 +567,7 @@
         "id": "jggJqya8bPtw",
         "outputId": "d4101852-6405-4987-ec67-cc794b7b9fe9"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +603,7 @@
         "id": "40EferJkiFey",
         "outputId": "030a6b83-d9a8-4d11-a73f-72866f67e980"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -665,7 +665,7 @@
       "metadata": {
         "id": "Lyen2FGkgGmB"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +683,7 @@
         "id": "eqdqB5Ppjmn5",
         "outputId": "8e97a4d0-1049-4551-bc3f-65b0c5fe01f5"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -823,7 +823,7 @@
         "id": "kTove048kh_l",
         "outputId": "4e3f4294-5889-49f7-bf68-f558643c31da"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -908,7 +908,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Evaluation"
+        "# Evaluation"
       ],
       "metadata": {
         "id": "06vF2z1Y4v5X"
@@ -982,7 +982,7 @@
         },
         "outputId": "de4284c0-e6f4-4132-9237-7f06fcb19a01"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1024,6 +1024,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Submission"
+      ],
+      "metadata": {
+        "id": "jHkUaHmsd0Dg"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import sys\n",
@@ -1043,7 +1052,7 @@
         "id": "auZnpDhXQbzA",
         "outputId": "b831c095-1241-45fd-c451-fd0109fd6493"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
