Colaboratory を使用して作成しました

--- a/house_prices/house_prices.ipynb
+++ b/house_prices/house_prices.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ozakiryota/kaggle/blob/main/houseprices_regression.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ozakiryota/kaggle/blob/main/house_prices/house_prices.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": null,
       "metadata": {
         "id": "MtAsLdCvCNbX",
         "colab": {
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "id": "J9DArlDbBzGo",
         "colab": {
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "id": "f5aWDaOv4w0U",
         "colab": {
@@ -876,7 +876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": null,
       "metadata": {
         "id": "dChbM1OBC4n2"
       },
@@ -895,7 +895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": null,
       "metadata": {
         "id": "2hDMnv2lI462",
         "colab": {
@@ -985,7 +985,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": null,
       "metadata": {
         "id": "Zp00Wnz7LxKz",
         "colab": {
@@ -1040,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": null,
       "metadata": {
         "id": "fIuzpP6_O3vu"
       },
@@ -1065,7 +1065,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {
         "id": "jggJqya8bPtw",
         "colab": {
@@ -1135,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": null,
       "metadata": {
         "id": "40EferJkiFey",
         "colab": {
@@ -1185,7 +1185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": null,
       "metadata": {
         "id": "Lyen2FGkgGmB"
       },
@@ -1200,8 +1200,8 @@
         "        layer_list = []\n",
         "        for i in range(len(fc_dim_list) - 1):\n",
         "            layer_list.append(nn.Linear(fc_dim_list[i], fc_dim_list[i+1]))\n",
-        "            layer_list.append(nn.ReLU(inplace=True))\n",
         "            if i != len(fc_dim_list) - 2:\n",
+        "                layer_list.append(nn.ReLU(inplace=True))\n",
         "                layer_list.append(nn.Dropout(p=dropout_rate))\n",
         "        self.fc = nn.Sequential(*layer_list)\n",
         "\n",
@@ -1212,7 +1212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "eqdqB5Ppjmn5",
         "colab": {
@@ -1274,7 +1274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1481,7 +1481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {
         "id": "iVoPgqpCva4O",
         "colab": {
@@ -1610,7 +1610,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": null,
       "metadata": {
         "id": "auZnpDhXQbzA",
         "colab": {
@@ -1640,16 +1640,16 @@
         "    print(\"Type 'y' or 'n'\")\n",
         "    ans = input()\n",
         "if ans == \"y\":\n",
-        "    !kaggle competitions submit -c house-prices-advanced-regression-techniques -f submission.csv -m \"houseprices_regression.ipynb\""
+        "    !kaggle competitions submit -c house-prices-advanced-regression-techniques -f submission.csv -m \"house_prices.ipynb\""
       ]
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "name": "houseprices_regression.ipynb",
+      "name": "house_prices.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMyPe7W54B2HKJcqb2XxuPU",
+      "authorship_tag": "ABX9TyMrYQ07l8HuXz82F6Ux9osu",
       "include_colab_link": true
     },
     "kernelspec": {
