Colaboratory を使用して作成しました

--- a/store_sales/store_sales_fc.ipynb
+++ b/store_sales/store_sales_fc.ipynb
@@ -1219,6 +1219,9 @@
         "        self.device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "        print(\"self.device = \", self.device)\n",
         "\n",
+        "        self.num_epochs = num_epochs\n",
+        "        self.save_weights_path = save_weights_path\n",
+        "\n",
         "        datalist = makeDataList([train_csv_path], store_csv_path, oil_csv_path, holiday_csv_path)\n",
         "        train_datalist, val_datalist = train_test_split(datalist, test_size=0.1, random_state=1234, shuffle=True)\n",
         "        train_dataset = DatasetMaker(train_datalist)\n",
@@ -1226,7 +1229,6 @@
         "        train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
         "        val_dataloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False, drop_last=False)\n",
         "        \n",
-        "        self.num_epochs = num_epochs\n",
         "        self.dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n",
         "        self.net = Network(\n",
         "            fc_dim_list = [dataset.__getitem__(index=0)[0].shape[0], 128, 64, 1],\n",
@@ -1241,8 +1243,6 @@
         "        ## time\n",
         "        start_clock = time.time()\n",
         "        ## record\n",
-        "        record_train_loss = []\n",
-        "        record_val_loss = []\n",
         "        record_loss_dict = {\"train\": [], \"val\": []}\n",
         "        min_loss_epoch = 0.0\n",
         "        ## loop\n",
@@ -1489,7 +1489,7 @@
     "colab": {
       "name": "store_sales_fc.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNCqifnQS0UN6BT9P5vw8gz",
+      "authorship_tag": "ABX9TyNNF+eTMpV6GgZnvv8tSwEO",
       "include_colab_link": true
     },
     "kernelspec": {
