Colaboratory を使用して作成しました

--- a/store_sales/store_sales_fc.ipynb
+++ b/store_sales/store_sales_fc.ipynb
@@ -1286,7 +1286,7 @@
         "            ## save\n",
         "            if epoch == 0 or record_loss_dict[\"val\"][-1] < min_loss_epoch:\n",
         "                min_loss_epoch = record_loss_dict[\"val\"][-1]\n",
-        "                torch.save(self.net.state_dict(), save_weights_path)\n",
+        "                torch.save(self.net.state_dict(), self.save_weights_path)\n",
         "        ## time\n",
         "        mins = (time.time() - start_clock) // 60\n",
         "        secs = (time.time() - start_clock) % 60\n",
@@ -1489,7 +1489,7 @@
     "colab": {
       "name": "store_sales_fc.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNNF+eTMpV6GgZnvv8tSwEO",
+      "authorship_tag": "ABX9TyN/s+12GYXKggqPIEV3WMqw",
       "include_colab_link": true
     },
     "kernelspec": {
