Colaboratory を使用して作成しました

--- a/titanic/titanic_dnn.ipynb
+++ b/titanic/titanic_dnn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "titanic_dnn.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcYD5P+CIlsm9vAKW+biC+",
+      "authorship_tag": "ABX9TyM/w14IkW1kYXMAvxT4gXa+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
         "id": "MtAsLdCvCNbX",
         "outputId": "bd0ec8df-5272-453c-af18-c894f825124d"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,7 +107,7 @@
         "id": "J9DArlDbBzGo",
         "outputId": "25f2d067-4f0a-41d7-c426-abe5168a66b0"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -524,7 +524,7 @@
       "metadata": {
         "id": "dChbM1OBC4n2"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -542,7 +542,7 @@
         "id": "2hDMnv2lI462",
         "outputId": "be7f1cc4-4a33-4fbc-cc45-d9c52fa17e6d"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         "id": "Zp00Wnz7LxKz",
         "outputId": "f7789e08-91a0-4e8e-8700-c18714b36e4c"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +645,7 @@
       "metadata": {
         "id": "fIuzpP6_O3vu"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -664,7 +664,7 @@
         "id": "jggJqya8bPtw",
         "outputId": "d9817699-2577-48d4-e518-9f18e573687e"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -700,7 +700,7 @@
         "id": "40EferJkiFey",
         "outputId": "05c490f2-bd4c-4ec4-f1ec-003b5f482d1b"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,7 +763,7 @@
       "metadata": {
         "id": "Lyen2FGkgGmB"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -782,7 +782,7 @@
         "id": "eqdqB5Ppjmn5",
         "outputId": "ebaffa9c-4184-4be7-abfb-b420c9b362f1"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -829,7 +829,10 @@
         "    def __init__(self, csv_path, num_epochs, batch_size, lr, save_weights_path):\n",
         "        self.device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
         "        print(\"self.device =\", self.device)\n",
-        "        \n",
+        "\n",
+        "        self.num_epochs = num_epochs\n",
+        "        self.save_weights_path = save_weights_path    \n",
+        "\n",
         "        datalist = makeDataList(csv_path)\n",
         "        train_datalist, val_datalist = train_test_split(datalist, test_size=0.1, random_state=1234, shuffle=True)\n",
         "        train_dataset = DatasetMaker(train_datalist)\n",
@@ -837,7 +840,6 @@
         "        train_dataloader = torch.utils.data.DataLoader(train_dataset, batch_size=batch_size, shuffle=True, drop_last=True)\n",
         "        val_dataloader = torch.utils.data.DataLoader(val_dataset, batch_size=batch_size, shuffle=False, drop_last=False)\n",
         "        \n",
-        "        self.num_epochs = num_epochs\n",
         "        self.dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n",
         "        self.net = Network(len(train_dataset.__getitem__(index=0)[0]), 64, 2, dropout_rate=0.1)\n",
         "        self.net.to(self.device)\n",
@@ -849,8 +851,6 @@
         "        ## time\n",
         "        start_clock = time.time()\n",
         "        ## record\n",
-        "        record_train_loss = []\n",
-        "        record_val_loss = []\n",
         "        record_loss_dict = {\"train\": [], \"val\": []}\n",
         "        min_loss_epoch = 0.0\n",
         "        ## loop\n",
@@ -894,7 +894,7 @@
         "            ## save\n",
         "            if epoch == 0 or record_loss_dict[\"val\"][-1] < min_loss_epoch:\n",
         "                min_loss_epoch = record_loss_dict[\"val\"][-1]\n",
-        "                torch.save(self.net.state_dict(), save_weights_path)\n",
+        "                torch.save(self.net.state_dict(), self.save_weights_path)\n",
         "        ## time\n",
         "        mins = (time.time() - start_clock) // 60\n",
         "        secs = (time.time() - start_clock) % 60\n",
@@ -930,7 +930,7 @@
         "id": "kTove048kh_l",
         "outputId": "dea83c5a-b292-484d-97dd-5117b7e2d9f3"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1086,7 +1086,7 @@
         },
         "outputId": "e43338d9-a16a-479c-9d5d-7f736d039a8c"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1156,7 +1156,7 @@
         "id": "auZnpDhXQbzA",
         "outputId": "163e57e4-6251-4000-83a3-26c1a694d716"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
