Colaboratory を使用して作成しました

--- a/titanic/titanic_dnn.ipynb
+++ b/titanic/titanic_dnn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "titanic_dnn.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/w14IkW1kYXMAvxT4gXa+",
+      "authorship_tag": "ABX9TyMGW5VsV1Jyo8f8/8kRzClg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -843,7 +843,7 @@
         "        self.dataloaders_dict = {\"train\": train_dataloader, \"val\": val_dataloader}\n",
         "        self.net = Network(len(train_dataset.__getitem__(index=0)[0]), 64, 2, dropout_rate=0.1)\n",
         "        self.net.to(self.device)\n",
-        "        print(net)\n",
+        "        print(self.net)\n",
         "        self.criterion = nn.CrossEntropyLoss()\n",
         "        self.optimizer = optim.Adam(self.net.parameters(), lr=lr)\n",
         "\n",
@@ -874,7 +874,7 @@
         "                    labels = labels.to(self.device)\n",
         "                    ## reset gradient\n",
         "                    self.optimizer.zero_grad()\n",
-        "                    ## switch computing gradient\n",
+        "                    ## compute gradient only in training\n",
         "                    with torch.set_grad_enabled(phase == \"train\"):\n",
         "                        ## forward\n",
         "                        outputs = self.net(inputs)\n",
@@ -887,7 +887,7 @@
         "                    loss_epoch += loss.item() * inputs.size(0)\n",
         "                    num_inputs_epoch += inputs.size(0)\n",
         "                ## average loss\n",
-        "                loss_epoch = loss_epoch / len(self.dataloaders_dict[phase].dataset)\n",
+        "                loss_epoch = loss_epoch / num_inputs_epoch\n",
         "                record_loss_dict[phase].append(loss_epoch)\n",
         "                if epoch == 0 or not (epoch+1) % (num_epochs // 10):\n",
         "                    print(\"{} Loss: {:.4f}\".format(phase, loss_epoch))\n",
